# buttons-sdk

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
examples/: keypad-hid.c
include/: buttons.h  version.h.in
pkgconfig/: buttons.pc.in
scripts/: keypadctl
src/: buttons.c  gpio_backend.h  gpio_gpiod.c
